<resources>
    <string name="app_name">Swayam Smart</string>
    <string name="text_you_want_to">Welcome to</string>
    <string name="text_forget_mpin">Forget MPIN  ?</string>
    <string name="text_get_otp">Get OTP</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_signup">Join Swayam</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_enter_10_digits_mobile_number">Enter 10 Digit Mobile Number</string>
    <string name="hint_otp">OTP</string>
    <string name="lbl_login">LOGIN</string>
    <string name="registration">SIGN UP</string>
    <string name="hint_name">Name</string>
    <string name="text_login">Login In</string>
    <string name="text_already_account">Already have an account ?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="lbl_profile">Edit Profile</string>
    <string name="lbl_manage_promotions">Manage Promotions</string>
    <string name="lbl_refer_and_earn">Refer and Earn</string>
    <string name="lbl_my_transactions">My Transactions</string>
    <string name="lbl_promo_performance">Promo Performance</string>
    <string name="lbl_about_us">About Us</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_promote_ur_self">Promote Your Self</string>
    <string name="lbl_contact_details">Profile Detail</string>
    <string name="lbl_ima">I Am</string>
    <string name="lbl_company">Company</string>
    <string name="lbl_individual">Individual</string>
    <string name="alt_mobile">Alternet Mobile Number if Any</string>
    <string name="email">Email Id</string>
    <string name="lbl_business_details">Business Details</string>
    <string name="lbl_working_day">Working Days</string>
    <string name="lbl_mon">Mon</string>
    <string name="lbl_tue">Tue</string>
    <string name="lbl_wed">Wed</string>
    <string name="lbl_thu">Thu</string>
    <string name="lbl_service">Service</string>
    <string name="lbl_Cities">Cities</string>
    <string name="lbl_profile_description">Profile Description</string>
    <string name="back_mes">Do you want to exit ?</string>
    <string name="name_error">Please enter name</string>
    <string name="mobile_error">Please enter Mobile number</string>
    <string name="mobile_lenght_error">Mobile Number length sholud be 10 digits</string>
    <string name="pwd_error">Please enter OTP</string>
    <string name="pwd_lenght_error">OTP length sholud be 4 digits</string>
    <string name="lbl_verification">Enter your verification code \n we have just sent you on your mobile number</string>
    <string name="txt_verify">Verify</string>
    <string name="empty_otp">Please enter OTP</string>
    <string name="valid_otp">Please enter valid OTP</string>
    <string name="lbl_your_role">Your Role</string>
    <string name="i_am_saller">Seller</string>
    <string name="i_am_service_provider">Service Provider</string>
    <string name="i_have_needs">I have Needs</string>
    <string name="lbl_fri">Fri</string>
    <string name="lbl_sat">Sat</string>
    <string name="lbl_working_hours">Working Hours</string>
    <string name="lbl_from">From</string>
    <string name="lbl_to">To</string>
    <string name="lbl_sun">Sun</string>
    <string name="lbl_service_provided">Service Provided</string>
    <string name="lbl_home_service">Home Service</string>
    <string name="lbl_financial_service">Financial Service</string>
    <string name="lbl_events_service">Events Service</string>
    <string name="lbl_travel_service">Travel Service</string>
    <string name="search_services">Search Services</string>
    <string name="noof_employee">No of Employees</string>
    <string name="your_website">Your Website</string>
    <string name="about_the_cmpany">About The Company</string>
    <string name="lbl_FancyCosmeticShop">Fancy/Cosmetic Shop</string>
    <string name="lbl_Professional">Professional</string>
    <string name="lbl_DressMaterials">Dress Materials</string>
    <string name="lbl_Kids">Kids</string>
    <string name="lbl_LadiesCorner">Ladies Corner</string>
    <string name="lbl_Ladies_Corner">Ladies Corner</string>
    <string name="lbl_ProfessionalEvents">Professional/Events</string>
    <string name="lbl_ladies_corner">Ladies Corner</string>
    <string name="beauty_products">"Beauty Products "</string>
    <string name="jewelries">Jewelries</string>
    <string name="lbl_professional_events">Professional/Events</string>
    <string name="pujas">Pujas</string>
    <string name="geyser">Geyser</string>
    <string name="lbl_dress_materials">Dress Materials</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="lbl_type_of_work">Type of Work</string>
    <string name="lbl_selectservicearea">Select Service Areas</string>
    <string name="lbl_alllocality">All Locality</string>
    <string name="lbl_citylocality">Chintamaniswar, 751006</string>
    <string name="lbl_citylocality1">Laxmisagar, 751006</string>
    <string name="lbl_citylocality2">Rasulgarh, 751007</string>
    <string name="lbl_citylocality3">Kalpana Square, 751006</string>
    <string name="lbl_citylocality4">Budheswary Colony, 751006</string>
    <string name="lbl_selectlocality">Select Locality</string>
    <string name="lbl_additionaldetail">Additional Detail</string>
    <string name="lbl_address_line1">Address Line 1</string>
    <string name="lbl_address_line2">Address Line 2</string>
    <string name="lbl_pincode">Pincode</string>
    <string name="lbl_search_service">Search Services</string>
    <string name="lbl_alternetmobile">Alternet Mobile No</string>
    <string name="lbl_upload_files">Upload Files</string>
    <string name="drag_file_here">Drag File Here</string>
    <string name="lbl_state">State</string>
    <string name="lbl_select_state">Select State</string>
    <string name="lbl_select_city">Select Cities</string>
    <string name="lbl_select_service_area">Select Service Area</string>
    <string name="lbl_employe_code">Employee Code</string>
    <string name="lbl_hours">24/7</string>
    <string name="lbl_service_area">Service Area</string>
    <string name="cosmetic_products">Cosmetic Products</string>
    <string name="accessories">Accessories</string>
    <string name="lbl_select_year">Select Year</string>
    <string name="call_now">Call Now</string>
    <string name="view">View</string>
    <string name="contact_person">Contact Person</string>
    <string name="lbl_speciality">Speciality</string>
    <string name="all_images">All Images</string>
    <string name="done">Done</string>
    <string name="permission_filepicker_rationale">Storage permission is needed to access files.</string>
    <string name="no_files_found">No Files Found</string>
    <string name="attachments_title_text" formatted="false">(%d/%d)</string>
    <string name="attachments_num" formatted="false">%d</string>
    <string name="select_photo_text">Select a media</string>
    <string name="select_doc_text">Select a document</string>
    <string name="no_camera_exists">No Application exists for camera!</string>
    <string name="pdf_title">PDF</string>
    <string name="ppt_title">PPT</string>
    <string name="word_title">DOC</string>
    <string name="excel_title">XLS</string>
    <string name="txt_title">TXT</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="all_photos">All Photos</string>
    <string name="all_videos">All Videos</string>
    <string name="all_files">All Files</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="lbl_preview">Preview</string>
    <string name="lbl_submit">Submit</string>
    <string name="powered_by">Developed By</string>
    <string name="lbl_swayam_package">Swayam Package</string>
    <string name="lbl_share_app">Share Swayam Smart App</string>
    <string name="verified">Verified</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_notification">Notification</string>
    <string name="market">Market</string>
    <string name="utilities">Utilities</string>
    <string name="friends">Friends</string>
    <string name="share">Share</string>
    <string name="daily_average">Daily Average</string>
    <string name="steps">Steps</string>
    <string name="kcal">KCAL</string>
    <string name="winner">Winner</string>
    <string name="data_used_today">Data Used Today</string>
    <string name="mb">MB</string>
    <string name="data_usage">Data Usage</string>
    <string name="app_usage">App Usage</string>
    <string name="hotspot_usage">Hotspot Usage</string>
    <string name="bg_fg_usage">Background / Foreground Usage</string>
    <string name="view_more">View More</string>
    <string name="your_offer">Your Offer</string>
    <string name="lbl_select_gender">Select Gender</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_male">Male</string>
    <string name="hint_date_of_birth">Date Of Birth</string>
    <string name="hint_email">Email</string>
    <string name="email_error">Please enter email</string>
    <string name="dob_error">Please enter date of birth</string>
    <string name="state_error">Please enter state</string>
    <string name="cities_error">Please enter cities</string>
    <string name="service_area_error">Please enter service area</string>
    <string name="hint_date_of_year">Date Of Year</string>
    <string name="promo_code">Promo Code</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="signup_mes">Once your profile is created can not be changed</string>
    <string name="email_validation">Please enter validate mail address</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="shop_name">Shop Name</string>
    <string name="offer_price">Offer Price</string>
    <string name="additional_offer">Additional Offer</string>
    <string name="category">Category</string>
    <string name="promo_start_date">Promo Start Date</string>
    <string name="promo_expries">Promo Expries</string>
    <string name="lbl_forward_to_get_more_swayam_coins">Forward to get more Swayam Coins</string>
    <string name="lbl_chat_with_service_provider">Chat with Service Provider</string>
    <string name="lbl_like">Like</string>
    <string name="lbl_dislike">Dislikes</string>
    <string name="working_days">Working Days</string>
    <string name="timings">Timings</string>
    <string name="lunch_timings">Lunch Timing</string>
    <string name="operating_since">Operating Since</string>
    <string name="other_service">Other Service</string>
    <string name="lbl_query_detail">Query Detail in 100 Words</string>
    <string name="empty_query_detail">You can not send empty query message</string>
    <string name="kb">KB</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_send">Send</string>
    <string name="original_price">Original Price</string>
    <string name="likes">Likes :</string>
    <string name="dislikes">Dislikes :</string>
    <string name="views">Views :</string>
    <string name="final_price">Final Price</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_date_of_year">Date of Year</string>
    <string name="lbl_cities">Cities</string>
    <string name="service_description">Service Description</string>
    <string name="goal">Goal</string>
    <string name="step_size">Step size</string>
    <string name="about">About</string>
    <string name="account">Account</string>
</resources>