<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activity.area.SelectServiceAreaActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_43sdp"
        android:elevation="@dimen/_5sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_back_arrow"
            android:tint="@color/textHeader"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:singleLine="true"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/lbl_selectservicearea"
            android:textColor="@color/textHeader"
            android:textSize="@dimen/text_18" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            //Service
            <LinearLayout
                android:id="@+id/service_li"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/service_txt"
                    android:text="@string/lbl_service"
                    style="@style/MenuOption"
                    android:drawableRight="@drawable/ic_right_arrow_angle"/>

                <View style="@style/ViewLineMenu"/>

            </LinearLayout>

            //Cities
            <LinearLayout
                android:id="@+id/Cities_li"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Cities_txt"
                    android:text="@string/lbl_Cities"
                    style="@style/MenuOption"
                    android:drawableRight="@drawable/ic_right_arrow_angle"/>

                <View style="@style/ViewLineMenu"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/next_business_img"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/bg_circle_shape"
        android:backgroundTint="@color/colorPrimary"
        android:padding="@dimen/_8sdp"
        android:rotation="180"
        android:tint="@color/white"
        android:elevation="@dimen/_5sdp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/ic_back_arrow" />

</RelativeLayout>